# Dante

./: CMakeLists.txt  README.md
cmake/: build.cmake
common/dante/: CMakeLists.txt
common/dante/inc/: ParseEngine.hpp  ParseNode.h  ProjectNode.h  ProjectNodeTree.hpp
common/dante/inc/platform/cmake/: CMakeParseEngine.h
common/dante/inc/platform/msbuild/: MSBuildParseEngine.h
common/dante/src/: ParseNode.cpp  ProjectNode.cpp
common/dante/src/platform/cmake/: CMakeParseEngine.cpp
common/dante/src/platform/msbuild/: MSBuildParseEngine.cpp
common/utility/: CMakeLists.txt
common/utility/inc/: FileUtils.hpp  StringUtils.hpp
products/DanteExample/: CMakeLists.txt
products/DanteExample/src/: main.cpp
